--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,7 +3,7 @@ version: '3'
 volumes:
   pg_data:
   static:
-  media:
+  media: 
 
 services:
   db:
@@ -11,26 +11,23 @@ services:
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
-  
   backend:
-    build: ./backend/
+    image: nikita4/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
-      - media:/media
-
+      - media:/media 
   frontend:
+    image: nikita4/kittygram_frontend
     env_file: .env
-    build: ./frontend/
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
-
   gateway:
-    build: ./nginx/
+    image: nikita4/kitty_nginx
     env_file: .env
-    ports:
-      - 9000:80
     volumes:
       - static:/static
       - media:/media 
+    ports:
+      - 9000:80
