--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,8 @@ server {
   client_max_body_size 5M;
   index index.html;
 
+  server_tokens off;
+
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
